styles.css
@font-face {
  font-family: 'Director Regular';
  src: url(./fonts/Director-Regular.woff);
  src: url(./fonts/Director-Regular.woff2);
}

@font-face {
  font-family: 'Equateur Regular';
  src: url(./fonts/Equateur-Regular.woff);
  src: url(./fonts/Equateur-Regular.woff2);
}

@font-face {
  font-family: 'Karrik';
  src: url(./fonts/Karrik-Regular.woff);
  src: url(./fonts/Karrik-Regular.woff2);
}

@font-face {
  font-family: 'Format';
  src: url(./fonts/Format_1452.woff);
  src: url(./fonts/Karrik-Regular.woff2);
}


@font-face {
  font-family: 'Lack';
  src: url('./fonts/Lack-Regular.woff2') format('woff2'),
      url('./fonts/Lack-Regular.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}


body {
  margin: 0px;
  font-family: 'Lack';
  font-weight: normal;
  font-style: normal;
  background-color: #456163;
}

a {
  text-decoration: none;
  color:#faebd7;
  font-size: 30px;
  
}

button {
  font-family: 'Equateur Regular';
  color:#faebd7;
  padding: 10px;
  border: 1px solid #faebd7;
  background: inherit;
  cursor: pointer;
}

p {
  line-height: 1.6;
}


h1 {
  margin-block-end: 29.05px !important;
  margin-block-start: 29.05px !important;
}

.content-container {
  width: 100vw;
  color:#faebd7;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /* flex-wrap: wrap; */
}

.content-wrapper {
  display: flex;
  justify-content: center;
}

.home-text-wrapper {
  display: block;
  width: 100%;
  padding: 30px;
  height: 70%;
  top: 40;
  bottom: 40;
}

.name {
  font-size: 65px
}

h2 {
  font-size: 35px;
}

h3 {
  font-size: 26px;
}

.stack-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 200px;
  margin-bottom: 30px;
}

.stack-wrapper img {
  max-height: 35px;
}

.contact-wrapper {
  display: flex;
  align-items: center;
}
.contact-wrapper img {
  height: 1.2rem; 
  margin-right: 10px;
  transition: color ease 0.5s
}
.contact-me {
  font-size: 22px;
  /* color: #9f5252; */
  color:#f6bebe;
}

.contact-wrapper {
  transition: transform ease 0.5s;
}
.contact-wrapper:hover {
  /* color: #faebd7; */
  transform: translateX(+3%);
}

#menu-work-container {
  position: fixed;
  top: 0rem;
  right: 0rem;
  width: 20vw;
  height: 20vh;
  padding: 40px;
}

#menu-about-container {
  position: fixed;
  top: 0rem;
  left: 0rem;
  width: 20vw;
  height: 20vh;
  padding: 40px;
}

#linkedin-container {
  position: fixed;
  bottom: 0rem;
  left: 0rem;
  width: 20vw;
  height: 20vh;
  padding: 40px;
}

#github-container {
  position: fixed;
  bottom: 0rem;
  right: 0rem;
  width: 20vw;
  height: 20vh;
  padding: 40px;
}

.menu-work {
  position: fixed;
  top: 2.25rem;
  right: 2.25rem;
}

.menu-about {
  position: fixed;
  top: 2.25rem;
  left: 2.25rem;
}

.linkedin {
  position: fixed;
  width: 70px;
  height: 70px;
  bottom: 2.25rem;
  left: 2.25rem;
  border-radius: 30px;
  background-color: #faebd7;
}

.github {
  position: fixed;
  width: 70px;
  height: 70px;
  bottom: 2.25rem;
  right: 2.25rem;
  background-color: #faebd7;
  border-radius: 30px;
}

.about-logo {
  width: 40rem;
  position: fixed;
  top: -14rem;
  left: -17rem;
  z-index: -1;
}

.work-logo {
  width: 40rem;
  position: fixed;
  top: -215px;
  right: -150px;
  z-index: -1;
}

.home-logo {
  height: inherit;
  position: fixed;
  top: -35%;
  left: 20%;
}

a img {
  width: 72px;
}


.about-image {
  width: 100px;
  /* border-radius: 100%; */
}

.about-text-wrapper {
  display: block;
  width: 60%;
  padding: 10px;
  /* z-index: 99; */
}

.now {
  /* color: #ceba78; */
  color: #faebd7;
}

.stack {
  /* color:#c48585; */
  font-size: 20px;
  color: #e4da53;
  padding-top: 12px; 
}

.project-window {
  /* background-color: #313d3e; */
  width: 60%;
  padding: 5  0px;
  height: 70%;
  top: 40;
  bottom: 40;
  position: fixed;
  overflow-y:scroll;
  overflow-x:hidden;  
}

.projects-wrapper {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 80px;
  margin-right: 30px;
}

.project-summary, .project-date {
  font-size: 18px;
}

.project-links-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.project-link {
  font-size: 18px;
  z-index: 4 !important;
  padding: 10px;
  border: solid 1px #faebd7;
  transition: color 0.3s ease;
}

.project-link:hover {
  background-color: #9F5252;
}

.github-project-link:hover {
  filter: invert(38%) sepia(17%) saturate(1447%) hue-rotate(314deg) brightness(96%) contrast(87%);
}

.github-project-link {
  transition: color 0.3s ease;
}

.pink {
  color:#f6bebe;
}

.project-links-wrapper img {
  max-width: 35px;
  margin-left: 20px;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f6bebe;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #9f5252;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}


/* RESPONSIVE STYLES */

@media(max-width:900px) {

  .menu-work {
    top: 0.6rem;
    right: 0.8rem;
  }

  .menu-about {
    top: 0.6rem;
    left: 0.8rem;
  }

  .linkedin {
    bottom: 0.3rem;
    left: 0.3rem;
  }

  .github {
    bottom: 0.3rem;
    right: 0.3rem;
  }

  .about-image {
    width: 200px;
  }
}

@media(max-width:668px) {

  .home-text-wrapper {
    height: 100%;
    padding-left: 30px;
    padding-right: 30px;
  }

  .working-role {
    font-size: 28px;
  }

  .about-text-wrapper {
    display: block;
    width: 100%;
    padding-top: 234px; /* questionable */
    padding-bottom: 30px;
    padding-left: 30px;
    padding-right: 30px;
  }
  .projects-wrapper {
    margin-bottom: 100px;
  }

  .project-window {
    padding-left: 10px;
    padding-right: 10px;
    width: 90%;
  }

  .project-name {
    font-size: 24px;
    /* margin-bottom: 25px; */
  }

  .project-summary, .project-date {
    font-size: 18px;
    margin-bottom: 25px;
  }

  ::-webkit-scrollbar {
    width: 7px;
    display: none;
  }

  .about-me-title {
    font-size: 20px;
  }

  .about {
    font-size: 16px;
  }

  .about-image {
    width: 120px;
  }

  .stack {
    font-size: 16px;
    padding-bottom: 50px;
  }
}

